# edidkit-rs

./: Cargo.toml  LICENSE-MIT  README.md  RELEASING.md
.github/workflows/: ci.yml  publish.yml
docs/: RPD.edid-rs.md  RPD.md
examples/: README.md  edit_monitor_name.rs  print_extensions.rs
examples/support/: demo_edid.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_edid.rs
src/: error.rs  lib.rs
src/base/: descriptor.rs  mod.rs  parse.rs  types.rs  write.rs
src/cta861/: mod.rs  parse.rs  types.rs  write.rs
src/displayid/: mod.rs  parse.rs  types.rs  write.rs
src/edid/: document.rs  mod.rs  parse.rs  write.rs
src/model/: base.rs  cta861.rs  descriptor.rs  edid.rs  extension.rs  mod.rs
src/parser/: base.rs  cta861.rs  descriptor.rs  displayid.rs  mod.rs
src/utils/: bitfield.rs  checksum.rs  mod.rs
src/writer/: base.rs  cta861.rs  mod.rs
tests/: integration.rs
